# Academic-Figure-Generator-OpenAI

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py
backend/app/api/v1/: images.py  prompts.py
backend/app/core/prompts/: figure_types.py  system_prompt.py
backend/app/services/: image_service.py  openai_prompt_service.py
backend/tests/: test_config.py  test_image_service.py  test_openai_prompt_service.py
frontend/src/pages/: ProjectWorkspace.tsx  Settings.tsx
