[project]
name = "academic-figure-generator"
version = "0.2.0"
description = "Academic Figure Generator - AI-powered scientific paper illustration (personal-use)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database (SQLite)
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    # HTTP client
    "httpx>=0.28.0",
    # Document parsing
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    # Settings
    "pydantic-settings>=2.6.0",
    # SSE
    "sse-starlette>=2.1.0",
    # OpenAI API
    "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
